# object_localization

./: .gitignore  CMakeLists.txt  package.xml  setup.py
configs/: ros.yaml  run.yaml  yolov4.yaml
include/object_localization/: Detector.cpp  Detector.h  ObjectLocatorNode.h  calibrator.h  common.hpp  cuda_utils.h  logging.h  utils.h  utils.hpp  yololayer.h
include/target_localization/: ObjectLocator.hpp
launch/: run.launch  test_with_video.launch
scripts/: object_locator_node.py  test_sub.py
src/: Detector.cpp  ObjectLocator.cpp  ObjectLocatorNode.cpp  calibrator.cpp  main.cpp  object_locator_node.cpp  test_node.py  yolo_trt.py  yololayer.cu
utils/: helpers.py
