<?xml version="1.0"?>
<package format="2">
  <name>object_localization</name>
  <version>0.0.0</version>
  <description>The object_localization package</description>
  <maintainer email="Tiga@todo.todo">Tiga</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>uav_stack_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_filters</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
